[package]
name = "saberdb"
version = "1.0.0"
edition = "2024"
authors = ["SaberDB Contributors"]
description = "A blazingly fast, simple JSON database for Rust"
license = "MIT"
repository = "https://github.com/simplysabir/saberdb"
keywords = ["database", "json", "storage", "embedded", "async"]
categories = ["database", "asynchronous"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["fs", "sync", "rt"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
